# talaria-bootloader

./: .gitignore  Cargo.toml  Makefile  README.md  boot.conf.example  build_vdi.sh  config.c  efi.vers  efi_helpers.c  font_jetbrains.c  get.sh  gui.c  hash_verify.c  install.sh  linux_boot.c  main.c  png_decoder.c  run.sh  sha256.c  talaria  talaria_x86_64.lds  text_menu.c  visor  visor_x86_64.lds  windows_boot.c
.cargo/: config.toml
include/: config.h  efi_helpers.h  font.h  gui.h  linux_boot.h  windows_boot.h
src/: boot.rs  config.rs  crypto.rs  efi_helpers.rs  font.rs  font_jetbrains.rs  gui.rs  main.rs  test_main.rs  text_menu.rs
tools/: bake_font.py
usb_test/EFI/BOOT/: BOOTX64.EFI
