[package]
name = "talaria-bootloader"
version = "0.1.0"
edition = "2024"

[dependencies]
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
log = "0.4.33"
sha2 = { version = "0.10.8", default-features = false, features = ["force-soft"] }
uefi = { version = "0.38.0", features = ["alloc", "global_allocator", "logger", "panic_handler"] }
uefi-macros = "0.19.0"
